--- a/snap-ui/pom.xml
+++ b/snap-ui/pom.xml
@@ -70,6 +70,10 @@
             <groupId>org.esa.snap</groupId>
             <artifactId>snap-tango</artifactId>
         </dependency>
+        <dependency>
+            <groupId>eu.esa.snap.netbeans</groupId>
+            <artifactId>snap-help-system</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
