--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,7 @@ mvn-build:
       - "${MAVEN_PROJECT_DIR}/**/target/*.jar"
       - "${MAVEN_PROJECT_DIR}/**/target/classes"
       - "${MAVEN_PROJECT_DIR}/**/target/*.nbm"
+      - "${MAVEN_PROJECT_DIR}/**/target/site"
+      - "${MAVEN_PROJECT_DIR}/**/target/surefire-reports"
       - "${MAVEN_PROJECT_DIR}/**/target/snap"
       - "${MAVEN_PROJECT_DIR}/snap-smart-configurator-ui/src/main/resources/org/esa/snap/smart/configurator/ui/Performance32.png"
