--- a/snap-gpf-ui/pom.xml
+++ b/snap-gpf-ui/pom.xml
@@ -132,11 +132,10 @@
         </dependency>
         <dependency>
             <groupId>org.esa.snap</groupId>
-            <artifactId>snap-test-utils</artifactId>
-            <type>test-jar</type>
+            <artifactId>ceres-core</artifactId>
             <scope>test</scope>
+            <type>test-jar</type>
         </dependency>
-
 
     </dependencies>
 
