--- a/nbexec/pom.xml
+++ b/nbexec/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>nbexec</artifactId>
     <!-- packaging must be "jar", not "nbm" -->
     <packaging>jar</packaging>
-    <version>9.0.7-SNAPSHOT</version>
+    <version>9.0.7</version>
 
     <name>Java NetBeans Launcher</name>
     <description>Plain Java launcher for NetBeans Platform (Maven) development in IDEs other than NetBeans IDE
