--- a/snap-gpf-ui/pom.xml
+++ b/snap-gpf-ui/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.7-SNAPSHOT</version>
+        <version>9.0.7</version>
     </parent>
 
     <artifactId>snap-gpf-ui</artifactId>
