--- a/snap-land-cover-ui/pom.xml
+++ b/snap-land-cover-ui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.7-SNAPSHOT</version>
+        <version>9.0.7</version>
     </parent>
 
     <artifactId>snap-land-cover-ui</artifactId>
