--- a/snap-change-detection-ui/pom.xml
+++ b/snap-change-detection-ui/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>9.0.7</version>
+        <version>9.0.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>snap-change-detection-ui</artifactId>
