--- a/snap-virtual-file-system-preferences-ui/pom.xml
+++ b/snap-virtual-file-system-preferences-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>9.0.7</version>
+        <version>9.0.8-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
