change version of snap-engine & snap-desktop to 9.0.8

--- a/snap-virtual-file-system-ui/pom.xml
+++ b/snap-virtual-file-system-ui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.8-SNAPSHOT</version>
+        <version>9.0.8</version>
     </parent>
 
     <artifactId>snap-virtual-file-system-ui</artifactId>
