--- a/lib-gdal-preferences-ui/pom.xml
+++ b/lib-gdal-preferences-ui/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.8-SNAPSHOT</version>
+        <version>9.0.8</version>
     </parent>
 
     <artifactId>lib-gdal-preferences-ui</artifactId>
