--- a/snap-remote-execution-ui/pom.xml
+++ b/snap-remote-execution-ui/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.8-SNAPSHOT</version>
+        <version>9.0.8</version>
     </parent>
 
     <artifactId>snap-remote-execution-ui</artifactId>
