--- a/snap-smart-configurator-ui/pom.xml
+++ b/snap-smart-configurator-ui/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.8-SNAPSHOT</version>
+        <version>9.0.8</version>
     </parent>
     <artifactId>snap-smart-configurator-ui</artifactId>
     <packaging>nbm</packaging>
