--- a/snap-product-library-ui/pom.xml
+++ b/snap-product-library-ui/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>9.0.8</version>
+        <version>9.0.9-SNAPSHOT</version>
     </parent>
 
     <name>SNAP Product Library UI</name>
