--- a/snap-sta-ui/pom.xml
+++ b/snap-sta-ui/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>10.0.0-SNAPSHOT</version>
+        <version>10.0.0-RC2</version>
     </parent>
 
     <artifactId>snap-sta-ui</artifactId>
