--- a/snap-branding/src/main/nbm-branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
+++ b/snap-branding/src/main/nbm-branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
@@ -3,5 +3,5 @@ CTL_AboutAction_Name=About SeaDAS...
 CTL_AboutAction_Title=About SeaDAS
 CTL_SnapUpdate_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap/updates.xml.gz
 CTL_SnapToolboxesUpdate_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap-toolboxes/updates.xml.gz
-CTL_SnapSupportedPlugins_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap-supported-plugins/updates.xml.gz
-CTL_SnapCommunityPlugins_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap-community-plugins/updates.xml.gz
+#CTL_SnapSupportedPlugins_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap-supported-plugins/updates.xml.gz
+#CTL_SnapCommunityPlugins_URL=https://oceandata.sci.gsfc.nasa.gov/SeaDAS/updatecenter/9.x/snap-community-plugins/updates.xml.gz
