--- a/snap-application/pom.xml
+++ b/snap-application/pom.xml
@@ -238,7 +238,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.2.5</version>
                 <configuration>
                     <!-- currently the application test fails during initialisation of JAI-->
                     <skipTests>true</skipTests>
