SNAP-3838 fix LandCoverOpUI add DefaultMutableTreeNode to path and add tests

--- a/snap-land-cover-ui/pom.xml
+++ b/snap-land-cover-ui/pom.xml
@@ -65,6 +65,12 @@
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-util-ui</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
