--- a/snap-worldwind/pom.xml
+++ b/snap-worldwind/pom.xml
@@ -84,12 +84,12 @@
         <dependency>
             <groupId>org.jogamp.gluegen</groupId>
             <artifactId>gluegen-rt-main</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.jogamp.jogl</groupId>
             <artifactId>jogl-all-main</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0</version>
         </dependency>
 
         <!-- natives -->
@@ -118,11 +118,17 @@
             <classifier>natives-linux-i586</classifier>
             <version>2.3.2</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jogamp.gluegen</groupId>-->
+<!--            <artifactId>gluegen-rt</artifactId>-->
+<!--            <classifier>natives-macosx-universal</classifier>-->
+<!--            <version>2.4.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.jogamp.gluegen</groupId>
             <artifactId>gluegen-rt</artifactId>
-            <classifier>natives-macosx-universal</classifier>
-            <version>2.4.0</version>
+            <classifier>natives-linux-aarch64</classifier>
+            <version>2.5.0</version>
         </dependency>
 
         <dependency>
@@ -149,11 +155,17 @@
             <classifier>natives-linux-i586</classifier>
             <version>2.3.2</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.jogamp.jogl</groupId>
             <artifactId>jogl-all</artifactId>
             <classifier>natives-macosx-universal</classifier>
             <version>2.4.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl-all</artifactId>
+            <classifier>natives-linux-aarch64</classifier>
+            <version>2.5.0</version>
         </dependency>
 
         <!-- netbeans platform -->
@@ -225,4 +237,11 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>jogamp</id>
+            <url>https://jogamp.org/deployment/maven/</url>
+        </repository>
+    </repositories>
 </project>
