--- a/snap-worldwind/pom.xml
+++ b/snap-worldwind/pom.xml
@@ -118,19 +118,6 @@
             <classifier>natives-linux-i586</classifier>
             <version>2.3.2</version>
         </dependency>
-        <!-- TODO check on mac intel if worldwind can still be worked with after commenting this out -->
-<!--        <dependency>-->
-<!--            <groupId>org.jogamp.gluegen</groupId>-->
-<!--            <artifactId>gluegen-rt</artifactId>-->
-<!--            <classifier>natives-macosx-universal</classifier>-->
-<!--            <version>2.4.0</version>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>org.jogamp.gluegen</groupId>
-            <artifactId>gluegen-rt</artifactId>
-            <classifier>natives-linux-aarch64</classifier>
-            <version>2.5.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.jogamp.jogl</groupId>
@@ -155,19 +142,6 @@
             <artifactId>jogl-all</artifactId>
             <classifier>natives-linux-i586</classifier>
             <version>2.3.2</version>
-        </dependency>
-        <!-- TODO check on mac intel if worldwind can still be worked with after commenting this out -->
-        <!--<dependency>
-            <groupId>org.jogamp.jogl</groupId>
-            <artifactId>jogl-all</artifactId>
-            <classifier>natives-macosx-universal</classifier>
-            <version>2.4.0</version>
-        </dependency>-->
-        <dependency>
-            <groupId>org.jogamp.jogl</groupId>
-            <artifactId>jogl-all</artifactId>
-            <classifier>natives-linux-aarch64</classifier>
-            <version>2.5.0</version>
         </dependency>
 
         <!-- netbeans platform -->
@@ -210,6 +184,55 @@
             <version>${netbeans.version}</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>mac-intel</id>
+            <activation>
+                <os>
+                    <name>Mac OS X</name>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <dependencies>
+                        <dependency>
+                            <groupId>org.jogamp.gluegen</groupId>
+                            <artifactId>gluegen-rt</artifactId>
+                            <classifier>natives-macosx-universal</classifier>
+                            <version>2.4.0</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.jogamp.jogl</groupId>
+                            <artifactId>jogl-all</artifactId>
+                            <classifier>natives-macosx-universal</classifier>
+                            <version>2.4.0</version>
+                        </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>mac-arm</id>
+            <activation>
+                <os>
+                    <name>Mac OS X</name>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jogamp.gluegen</groupId>
+                    <artifactId>gluegen-rt</artifactId>
+                    <classifier>natives-linux-aarch64</classifier>
+                    <version>2.5.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jogamp.jogl</groupId>
+                    <artifactId>jogl-all</artifactId>
+                    <classifier>natives-linux-aarch64</classifier>
+                    <version>2.5.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
