--- a/snap-graph-builder/pom.xml
+++ b/snap-graph-builder/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>snap-core</artifactId>
             <type>test-jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
