--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
         <sonar.java.binaries>**/classes</sonar.java.binaries>
         <sonar.exclusions>*/src</sonar.exclusions>
+        <jvm.version>21</jvm.version>
     </properties>
 
     <modules>
