--- a/snap-binning-ui/pom.xml
+++ b/snap-binning-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>11.0.0</version>
+        <version>11.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>snap-binning-ui</artifactId>
