--- a/snap-product-library-ui-v2/pom.xml
+++ b/snap-product-library-ui-v2/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>11.0.1-SNAPSHOT</version>
+        <version>11.0.1</version>
     </parent>
 
     <artifactId>snap-product-library-ui-v2</artifactId>
