--- a/snap-raster-ui/pom.xml
+++ b/snap-raster-ui/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>11.0.1-SNAPSHOT</version>
+        <version>11.0.1</version>
     </parent>
 
     <artifactId>snap-raster-ui</artifactId>
