--- a/snap-land-cover-ui/pom.xml
+++ b/snap-land-cover-ui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>11.0.1</version>
+        <version>11.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>snap-land-cover-ui</artifactId>
