--- a/snap-znap-ui/pom.xml
+++ b/snap-znap-ui/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>12.0.0-SNAPSHOT</version>
+        <version>12.0.0</version>
     </parent>
 
     <name>ZNAP Options UI</name>
