--- a/snap-application/pom.xml
+++ b/snap-application/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>12.0.0</version>
+        <version>12.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>snap-application</artifactId>
