--- a/snap-main/pom.xml
+++ b/snap-main/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>12.0.0</version>
+        <version>12.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>snap-main</artifactId>
