--- a/snap-virtual-file-system-preferences-ui/pom.xml
+++ b/snap-virtual-file-system-preferences-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>12.0.0</version>
+        <version>12.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
