first ui implementations

--- a/snap-rcp/pom.xml
+++ b/snap-rcp/pom.xml
@@ -266,6 +266,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>snap-spectral-library</artifactId>
+            <version>${snap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>snap-ui</artifactId>
         </dependency>
         <dependency>
