--- a/snap-classification-ui/pom.xml
+++ b/snap-classification-ui/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.esa.snap</groupId>
         <artifactId>snap-desktop</artifactId>
-        <version>13.0.1-SNAPSHOT</version>
+        <version>13.0.1</version>
     </parent>
 
     <name>SNAP Classification UI</name>
