--- a/snap-sta-adapters/pom.xml
+++ b/snap-sta-adapters/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>snap-desktop</artifactId>
         <groupId>org.esa.snap</groupId>
-        <version>13.0.1-SNAPSHOT</version>
+        <version>13.0.1</version>
     </parent>
 
     <artifactId>snap-sta-adapters</artifactId>
